# ltda-console

./: .gitignore  CMakeLists.txt  README-ru.md  README.md  connectiondialog.cpp  connectiondialog.h  device.cpp  device.h  deviceinterface.cpp  deviceinterface.h  faderwidget.cpp  lan.cpp  lan.h  main.cpp  mainwindow.cpp  mainwindow.h  mixerchannel.cpp  mixerchannel.h  mixerfader.cpp  mixerfader.h  mixerwidget.cpp  mixerwidget.h  res.qrc  signallevelbar.cpp  signallevelbar.h  simulator.cpp  simulator.h  uart.cpp  uart.h  wifidialog.cpp  wifidialog.h
